# robotic-manipulator-controller

./: .gitignore  LICENSE  README.md
arm_control_workspace/devel/: .catkin  .rosinstall  setup.sh
arm_control_workspace/devel/include/ArmController/: GetArmStatus.h  GetArmStatusRequest.h  GetArmStatusResponse.h  GetMotorAngle.h  GetMotorAngleRequest.h  GetMotorAngleResponse.h  MoveAbsoluteMotor.h  MoveAbsoluteMotorRequest.h  MoveAbsoluteMotorResponse.h  MoveRelativeTool.h  MoveRelativeToolRequest.h  MoveRelativeToolResponse.h
arm_control_workspace/devel/lib/ArmController/: ArmController_node
arm_control_workspace/devel/lib/pkgconfig/: ArmController.pc
arm_control_workspace/devel/lib/python2.7/dist-packages/ArmController/srv/: _GetArmStatus.py  _GetMotorAngle.py  _MoveAbsoluteMotor.py  _MoveRelativeTool.py  __init__.py
arm_control_workspace/devel/share/ArmController/cmake/: ArmController-msg-extras.cmake  ArmController-msg-paths.cmake  ArmControllerConfig.cmake
arm_control_workspace/devel/share/common-lisp/ros/ArmController/srv/: ArmController-srv.asd  GetArmStatus.lisp  GetMotorAngle.lisp  MoveAbsoluteMotor.lisp  MoveRelativeTool.lisp  _package.lisp  _package_GetArmStatus.lisp  _package_GetMotorAngle.lisp  _package_MoveRelativeTool.lisp
arm_control_workspace/src/ArmController/: CMakeLists.txt  package.xml
arm_control_workspace/src/ArmController/Motor/: Motor.cpp  Motor.h
arm_control_workspace/src/ArmController/scripts/: motor_angle_sampling.py  pad_controller.py
arm_control_workspace/src/ArmController/src/: ArmController_node.cpp  Controller.cpp  Controller.h  RosServiceManager.cpp  RosServiceManager.h
arm_control_workspace/src/ArmController/src/motor/: AX12A.cpp  AX12A.h  Motor.cpp  Motor.h  SimMotor.cpp  SimMotor.h
arm_control_workspace/src/ArmController/src/resource/: robot.urdf
arm_control_workspace/src/ArmController/src/ros/: RosRobotStatePublisher.cpp  RosRobotStatePublisher.h  RosServiceManager.cpp  RosServiceManager.h
arm_control_workspace/src/ArmController/srv/: GetMotorAngle.srv  MoveAbsoluteMotor.srv  MoveIncrementMotor.srv  MoveRelativeTool.srv
arm_control_workspace/src/ArmController/util/: Pointers.h
arm_control_workspace/src/transform_broadcaster/: CMakeLists.txt  package.xml
arm_control_workspace/src/transform_broadcaster/src/: __init__.py  tf_broadcaster.py
doc/models/: robot.urdf  robot_demo.urdf  robot_viz  robot_viz.launch
