<?xml version="1.0"?>
<package>
  <name>transform_broadcaster</name>
  <version>0.0.0</version>
  <description>The transform_broadcaster package</description>
  <maintainer email="ritchie.karl@gmail.com">Karl Ritchie</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <export>
  </export>
</package>